FIX user-management__avatar-container flex-wrap

--- a/src/pages/UserManagement/UserManagement.css
+++ b/src/pages/UserManagement/UserManagement.css
@@ -52,6 +52,7 @@
 
 .user-management__avatar-container {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: var(--de-gap-xl);
   margin-bottom: var(--de-margin-s);
